<?xml version="1.0"?>
<package format="2">
  <name>handeye</name>
  <version>0.1.1</version>
  <description>The handeye package</description>

  <author email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</author>
  <maintainer email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</maintainer>
  <license>BSD 3-Clause</license>
  <url type="website">http://wiki.ros.org/handeye</url>
  <url type="repository">https://github.com/crigroup/handeye</url>
  <url type="bugtracker">https://github.com/crigroup/handeye/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>baldor</exec_depend>
  <exec_depend>criutils</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python-enum34</exec_depend>
  <exec_depend>python-matplotlib</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-scipy</exec_depend>

  <test_depend>rostest</test_depend>

  <doc_depend>rosdoc_lite</doc_depend>
  <doc_depend>sphinxcontrib-bibtex-pip</doc_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>

</package>
